udemy-course/sec13-assignmet/solution/11-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  frontend-app
  namespace: default
  labels:
    app:  frontend-app
spec:
  selector:
    matchLabels:
      app: frontend-app
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  frontend-app
    spec:
      containers:
      - name:  frontend-app
        image:  vinsdocker/k8s-dice-frontend
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  80
          name:  frontend-app
      restartPolicy: Always
