udemy-course/sec13-assignmet/solution/03-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: default
spec:
  clusterIP: None
  selector:
    app: mongo-app
  ports:
  - name: mongo-service-port
    protocol: TCP
    port: 27017
    targetPort: 27017
