udemy-course/sec13-assignmet/solution/09-candidate-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: candidate-service
  namespace: default
spec:
  selector:
    app: candidate-app
  type: ClusterIP
  ports:
  - name: candidate-service
    protocol: TCP
    port: 8080
    targetPort: 8080
