udemy-course/sec13-assignmet/solution/12-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: default
spec:
  selector:
    app: frontend-app
  type: ClusterIP
  ports:
  - name: frontend-port
    protocol: TCP
    port: 80
    targetPort: 80
