udemy-course/sec13-assignmet/solution/13-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: assignment-app
  namespace: default
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /job
        pathType: Prefix
        backend:
          service:
            name: job-service
            port:
              number: 8080
      - path: /candidate
        pathType: Prefix
        backend:
          service:
            name: candidate-service
            port:
              number: 8080
